Polish 'Fix inconsistent ordering of config imports'
See gh-49324