@@ -17,7 +17,6 @@
 package org.springframework.boot.context.config;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashSet;
@@ -199,8 +198,7 @@ class ConfigDataEnvironment {
 
 	private List<ConfigDataEnvironmentContributor> getInitialImportContributors(Binder binder) {
 		List<ConfigDataEnvironmentContributor> initialContributors = new ArrayList<>();
-		addInitialImportPropertyContributors(initialContributors,
-				bindLocations(binder, IMPORT_PROPERTY, EMPTY_LOCATIONS));
+		addInitialImportContributors(initialContributors, bindLocations(binder, IMPORT_PROPERTY, EMPTY_LOCATIONS));
 		addInitialImportContributors(initialContributors,
 				bindLocations(binder, ADDITIONAL_LOCATION_PROPERTY, EMPTY_LOCATIONS));
 		addInitialImportContributors(initialContributors,
@@ -212,25 +210,19 @@ class ConfigDataEnvironment {
 		return binder.bind(propertyName, CONFIG_DATA_LOCATION_ARRAY).orElse(other);
 	}
 
-	private void addInitialImportPropertyContributors(List<ConfigDataEnvironmentContributor> initialContributors,
+	private void addInitialImportContributors(List<ConfigDataEnvironmentContributor> initialContributors,
 			ConfigDataLocation[] locations) {
-		List<ConfigDataEnvironmentContributor> initialPropertiesContributors = new ArrayList<>();
-		addInitialImportContributors(initialPropertiesContributors, locations);
-		initialContributors.add(ConfigDataEnvironmentContributor.ofInitialImportProperty(
-			initialPropertiesContributors, this.environment.getConversionService(), Arrays.asList(locations))
-		);
+		addInitialImportContributors(initialContributors, List.of(locations));
 	}
 
 	private void addInitialImportContributors(List<ConfigDataEnvironmentContributor> initialContributors,
-			ConfigDataLocation[] locations) {
-		for (int i = locations.length - 1; i >= 0; i--) {
-			initialContributors.add(createInitialImportContributor(locations[i]));
+			List<ConfigDataLocation> locations) {
+		if (!locations.isEmpty()) {
+			this.logger.trace(LogMessage.format("Adding initial config data import from locations %s", locations));
+			ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImports(locations,
+					this.environment.getConversionService());
+			initialContributors.add(contributor);
 		}
-	}
-
-	private ConfigDataEnvironmentContributor createInitialImportContributor(ConfigDataLocation location) {
-		this.logger.trace(LogMessage.format("Adding initial config data import from location '%s'", location));
-		return ConfigDataEnvironmentContributor.ofInitialImport(location, this.environment.getConversionService());
 	}
 
 	/**
